audit trail added

--- a/src/app/components/app-sidebar/app-sidebar.component.html
+++ b/src/app/components/app-sidebar/app-sidebar.component.html
@@ -52,12 +52,8 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/charting']"><i class="icon-credit-card"></i> Payment </a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/audittrail']"><i class="icon-credit-card"></i> Audit Trail </a>
       </li>
-
-      <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/dynamic']"><i class="icon-credit-card"></i> Dynamic </a>
-        </li>
 
       <li class="nav-item nav-dropdown" routerLinkActive="open" appNavDropdown>
         <a class="nav-link nav-dropdown-toggle" href="#" appNavDropdownToggle><i class="icon-handbag"></i> Product</a>
